[package]
name = "tonic-client-bug"
version = "0.1.0"
authors = ["Dominic Wrege"]
edition = "2018"
publish = false
license = "MIT"

[[bin]]
name = "helloworld-server"
path = "src/helloworld/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/helloworld/client.rs"


[dependencies]
tonic = { version = "0.3.0", features = ["tls"] }
prost = "0.6.1"
tokio = { version = "0.2.21", features = ["full"] }
futures = "0.3.5"
async-stream = "0.2.1"

[build-dependencies]
tonic-build = "0.2.0"
